<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddATeamMemberActivity">

    <TextView
        android:id="@+id/userName"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="30dp"
        android:ems="3"
        android:text="User Name:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="214dp"
        android:layout_height="43dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:ems="3"
        android:text="Email:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <Button
        android:id="@+id/saveTeamMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="SAVE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="86dp"
        android:text="Add a Team Member"
        android:textColor="#009688"
        android:textSize="35dp"
        app:layout_anchorGravity="end|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>