...
        android:layout_marginTop="60dp"
        android:focusableInTouchMode="false"
        android:focusable="false"
        app:layout_constraintTop_toTopOf="parent"></ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/teamfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#035E52"
...
