...
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/TeamButton"
        android:layout_width="104dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:text="Team"
        android:textSize="24dp"
...
